<resources>
    <string name="app_name">Project Manager</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="splash_animation">splash animation</string>

    <string name="username_transition">let us win</string>
    <string name="profile_icon_transition">let me win</string>
    <string name="profile_icon">profile_icon</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
