<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="75dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerList_projects_id"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back_imageView_id"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/profile_icon"
            android:minWidth="50dp"
            android:src="@drawable/back_icon"
            android:transitionName="@string/profile_icon_transition"
            app:layout_constraintBottom_toBottomOf="@id/profile_TextView_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/profile_TextView_id"
            app:layout_constraintTop_toTopOf="@id/profile_TextView_id" />

        <TextView
            android:id="@+id/profile_TextView_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/back_imageView_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>